--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp-sync-db/wp-sync-db",
+  "name": "danone89/wp-sync-db",
   "type": "wordpress-plugin",
   "homepage": "https://github.com/wp-sync-db/wp-sync-db",
   "license": "GPL-2.0",
